Fix the course visibility admonition for banned students
The admonition on the course front page (about enrollment and course
visibility) used to incorrectly show the message
ENROLLMENT_AND_CONTENT_EXPLORATION_NOT_ALLOWED
in this case:
CourseInstance.view_content_to == ENROLLMENT_AUDIENCE and
enrollment_audience == INTERNAL_USERS and
an internal and banned user is logged in. The user may actually
explore the course contents with the banned enrollment
since unenrolled internal users may as well.

A known issue:
When course_instance.view_content_to == ENROLLMENT_AUDIENCE and
enrollment_audience == EXTERNAL_USERS, then
an internal user who has been banned sees the message
ENROLLMENT_NOT_ALLOWED_BUT_CAN_EXPLORE_CONTENT, but they actually
may not explore the course contents. Only external users may view
the content. The internal user may not enroll due to
the enrollment audience setting anyway, but they could have been
added and banned manually by the teacher.

It would be better if a method like CourseInstance.is_enrollable(user)
returned an explanation in addition to the boolean value. It is more
natural to define the exact message there since there are multiple
conditions to check.

--- a/course/templates/course/_enroll_form.html
+++ b/course/templates/course/_enroll_form.html
@@ -31,7 +31,7 @@
 			{% endblocktranslate %}
 		{% endif %}
 	{% elif profile %}
-		{% if instance.view_content_to < 3 %}
+		{% if instance.view_content_to < 2 or instance.view_content_to == 2 and not profile|is_banned_student:instance %}
 			{% translate "ENROLLMENT_AND_CONTENT_EXPLORATION_NOT_ALLOWED" %}
 		{% else %}
 			{% translate "ENROLLMENT_NOT_ALLOWED_BUT_CAN_EXPLORE_CONTENT" %}
