--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -69,6 +69,9 @@ $font-size-base:  $aplus-font-size-base;
 @import 'components/news';
 @import 'components/overlay';
 @import 'components/pagination';
+@import 'components/resize';
+@import 'components/sidebar';
+@import 'pages/assessment';
 @import 'pages/login';
 @import 'pages/profile-page';
 
