--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -64,6 +64,7 @@ $font-size-base:  $aplus-font-size-base;
 @import 'components/error_summary';
 @import 'components/focus';
 @import 'components/frontpage-cards';
+@import 'components/highlight';
 @import 'components/menu-notification';
 @import 'components/new-tab-links';
 @import 'components/news';
