--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -11,7 +11,7 @@
     {% else %}
     <p>{% translate "EARNED_POINTS" %}</p>
     <p><strong class="h2 exercise-info-points">
-        {{ summary.get_points }}
+        {% format_points summary.get_points feedback_revealed False %}
         <small>
             / {{ exercise.max_points }}
             {% if summary.get_penalty %}
