--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -63,7 +63,7 @@
 							{% endfor %}
 					</ul>
 			</li>
-			{% if is_course_staff or is_student and exercise.can_show_model_solutions %}
+			{% if is_course_staff or is_student and model_revealed %}
 			{% comment %} The model solution link is shown even if the student can not
 			open it due to personal extensions. However, this saves some database queries.
 			{% endcomment %}
