--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -55,7 +55,7 @@
 					<nav class="exercise-summary navbar navbar-default" aria-label="{{ exercise|parse_localization }}">
 						<ul class="nav navbar-nav exercise-nav">
 							<li>
-								<a href="{% if summary.get_best_submission %}{{ summary.get_best_submission|url:'submission-plain' }}{% else %}#{% endif %}">
+								<a href="{% if feedback_revealed and summary.get_best_submission %}{{ summary.get_best_submission|url:'submission-plain' }}{% else %}#{% endif %}">
 									<span>
 										{% if not exercise.category.confirm_the_level %}
 											{% translate "POINTS" %}
@@ -140,7 +140,7 @@
 								</li>
 							{% endif %}
 						</ul>
-						{% if is_course_staff or is_student and exercise.can_show_model_solutions %}
+						{% if is_course_staff or is_student and model_revealed %}
 							{% comment %} The model solution link is shown even if the student can not
 							open it due to personal extensions. However, this saves some database queries.
 							{% endcomment %}
