--- a/assets/sass/layout/_base.scss
+++ b/assets/sass/layout/_base.scss
@@ -9,7 +9,7 @@ body {
 }
 .site-content {
 	padding-bottom: 70px;
-	@media (max-width: 768px) {
+	@media (max-width: $grid-float-breakpoint-max) {
 		padding-bottom: 200px;
 	}
 }
