--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -67,7 +67,7 @@
 			overflow: hidden;
 			text-overflow: ellipsis;
 		}
-		@media (max-width: 768px) {
+		@media (max-width: $grid-float-breakpoint-max) {
 			.instance-selector {
 				margin-left: 30px;
 			}
@@ -87,7 +87,7 @@
 		div.dropdown-backdrop {
 			display: none;
 		}
-		@media (max-width: 768px) {
+		@media (max-width: $grid-float-breakpoint-max) {
 			li.open > ul.dropdown-menu {
 				& > li > a{
 					color: #dadada;
