Add the version number of the platform to the top navbar
Currently, the version number must be updated manually in the file
`aplus/__init__.py`.

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -49,6 +49,12 @@
 		}
 	}
 
+	.navbar-brand + .navbar-text {
+		float: left;
+		font-size: $font-size-small;
+		color: $gray-lighter;
+	}
+
 	.navbar-toggle .badge {
 		position: absolute;
 		right: -10px;
