--- a/templates/base.html
+++ b/templates/base.html
@@ -94,6 +94,7 @@
 				<div class="container-fluid">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="{% url 'home' %}">{% brand_name %}</a>
+						<p class="navbar-text">{{ APLUS_VERSION }}</p>
 						<ul class="nav navbar-dropdown">
 							<li role="separator" class="divider"></li>
 							<li role="presentation" class="dropdown">
