Add the version number of the platform to the site footer
Top navbar was covered in the previous commit
40a6580fe0022655c61a9e985d05067bbeaa3939

--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -14,4 +14,14 @@
 			color: #236aa7;
 		}
 	}
+
+	.navbar-text {
+		color: $gray;
+
+		@media (max-width: $grid-float-breakpoint-max) {
+			// Use the same layout as the navbar links.
+			padding: $nav-link-padding;
+			margin: 0;
+		}
+	}
 }
