--- a/templates/base.html
+++ b/templates/base.html
@@ -231,6 +231,7 @@
 						<li><a href="{% url 'accessibility_statement' %}">{% translate "ACCESSIBILITY_STATEMENT" %}</a></li>
 						<li><a href="{% url 'support_channels' %}">{% translate "SUPPORT" %}</a></li>
 						<li><a href="https://link.webropol.com/s/aplus-feedback" target="_blank">{% translate "FEEDBACK" %}</a></li>
+						<li><p class="navbar-text">{% brand_name %} {{ APLUS_VERSION }}</p></li>
 					</ul>
 				</div>
 			</div>
