Add link descriptions for screen readers in the submitted file links
Accessibility: the purpose of the link should be clear to screen readers.
Especially the download button was unclear since the visible link text
included only the file size, not filename. This has been fixed.

When a link opens a modal dialog, its role must be set to button.
Link semantics are only used for links that really take the user to
another page.

--- a/exercise/templates/exercise/_file_link.html
+++ b/exercise/templates/exercise/_file_link.html
@@ -1,8 +1,16 @@
 {% load i18n %}
 {% if file.exists %}
-	<a href="{{ file.get_absolute_url }}"{% if not file.is_passed %} class="file-modal"{% endif %}>{{ file.filename }}</a>
+	<a href="{{ file.get_absolute_url }}"{% if not file.is_passed %} class="file-modal" role="button" data-modal-title="{{ file.filename }}"{% endif %}>
+		<span class="sr-only">
+			{% blocktranslate trimmed with filename=file.filename %}VIEW_FILE -- {{ filename }}{% endblocktranslate %}
+		</span>
+		<span aria-hidden="true">{{ file.filename }}</span>
+	</a>
 	<a href="{{ file.get_absolute_url }}?download=yes" class="aplus-button--secondary aplus-button--xs" title="{% translate 'DOWNLOAD' %}">
 		<span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+		<span class="sr-only">
+			{% blocktranslate trimmed with filename=file.filename %}DOWNLOAD_FILE -- {{ filename }}{% endblocktranslate %}
+		</span>
 		{{ file.file_object.size|filesizeformat }}
 	</a>
 {% else %}
