Add style for left/right joined buttons
This commit adds the styles aplus-button--left and aplus-button--right.
Two buttons using these styles appear to be joined together, i.e. the
corners between them are not rounded. This can be used to signify that
the function of the right-side button is related to the left-side one.
For example, the right-side button could be a dropdown button or a help
button.

--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -105,4 +105,13 @@ $large-height: 24px;
 	&--lg {
 		@include button-size($large-height);
 	}
+	&--left {
+		border-top-right-radius: 0;
+		border-bottom-right-radius: 0;
+	}
+	&--right {
+		border-top-left-radius: 0;
+		border-bottom-left-radius: 0;
+		border-left: none;
+	}
 }
