Remove extra click from the regrade functionality
The "Regrade" button on the submission inspect page is now split into
two buttons. The left-side button re-submits the submission instantly,
without the modal window. The right-side button acts as a help button
and opens the modal window with a full explanation of the functionality.

Fixes #895

--- a/exercise/templates/exercise/staff/_assessment_panel.html
+++ b/exercise/templates/exercise/staff/_assessment_panel.html
@@ -24,11 +24,21 @@
 					data-target="#details-modal"
 					class="aplus-button--secondary aplus-button--sm"
 				>{% translate 'DETAILS' %}</button>
-				<button
-					data-toggle="modal"
-					data-target="#resubmit-modal"
-					class="aplus-button--secondary aplus-button--sm"
-				>{% translate 'REGRADE' %}</button>
+				<form method="post" action="{{ submission|url:'submission-re-submit' }}" style="display: inline-block">
+					{% csrf_token %}
+					<button
+						class="aplus-button--secondary aplus-button--sm aplus-button--left"
+						type="submit"
+					>
+						{% translate 'REGRADE' %}
+					</button><button
+						data-toggle="modal"
+						data-target="#resubmit-modal"
+						class="aplus-button--secondary aplus-button--sm aplus-button--right"
+						type="button"
+						title="{% translate 'HELP' %}"
+					>?</button>
+				</form>
 				<button
 					data-toggle="visibility"
 					data-target=".assessment-toggle"
