--- a/exercise/templates/exercise/staff/_resubmit_modal.html
+++ b/exercise/templates/exercise/staff/_resubmit_modal.html
@@ -29,7 +29,7 @@
 					<input
 						class="aplus-button--default aplus-button--md"
 						type="submit"
-						value="{% translate 'REGRADE' %}"
+						value="{% translate 'REGRADE_AUTOMATICALLY' %}"
 					/>
 				</form>
 			</div>
