Improve the points badge in the inspect submission page
The badge used to be green for unofficial submissions with full points.
In addition, this commit adds a similar tooltip to the points badge
that is used elsewhere too.

--- a/exercise/templates/exercise/staff/_submissions_table_compact.html
+++ b/exercise/templates/exercise/staff/_submissions_table_compact.html
@@ -43,9 +43,18 @@
 				{{ s.status|submission_status }}
 			</td>
 			<td>
-				<span class="badge {% if s.grade >= exercise.max_points %}badge-success{% elif s.grade >= exercise.points_to_pass %}badge-warning{% else %}badge-danger{% endif %}">
+				{% if exercise.difficulty %}
+					<span class="difficulty">{{ exercise.difficulty }}</span>
+				{% endif %}
+				<span
+					class="badge{% if s.status != 'unofficial' %} {% if s.grade >= exercise.max_points %}badge-success{% elif s.grade >= exercise.points_to_pass %}badge-warning{% else %}badge-danger{% endif %}{% endif %}"
+					data-toggle="tooltip"
+					data-placement="bottom"
+					title="{% if s.status == 'unofficial' %}{% translate 'UNOFFICIAL_DESCRIPTION' %}{% elif s.grade >= exercise.points_to_pass %}{% if exercise.points_to_pass > 0 %}{% translate 'PASSED' %}{% endif %}{% else %}{% blocktranslate trimmed with points=exercise.points_to_pass %}POINTS_REQUIRED_TO_PASS -- {{ points }}{% endblocktranslate %}{% endif %}"
+				>
 					{{ s.grade }} / {{ exercise.max_points }}
 				</span>
+
 				{% if s == summary.best_submission %}
 				<span
 					class="label label-primary"
