--- a/exercise/templates/exercise/staff/_submissions_table_compact.html
+++ b/exercise/templates/exercise/staff/_submissions_table_compact.html
@@ -5,7 +5,7 @@
 <table id="submission-table" class="table table-condensed">
 	<thead>
 		<tr>
-			<th>{% translate "ID" %}</th>
+			<th>{% translate "NUMBER_ABBREVIATED" %}</th>
 			<th>{% translate "TIME" %}</th>
 			<th>{% translate "STATUS" %}</th>
 			<th>{% translate "GRADE" %}</th>
