Allow passing an is_revealed value to points badge
There was an issue where reveal rules were calculated for each
submission in the submission list separately, even though the result
would be the same for each submission. This was fixed by allowing an
`is_revealed` argument to be passed
to the `points_badge` and `points_progress`
template tags, when it is known.

--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -6,7 +6,7 @@
     {% if exercise.category.confirm_the_level %}
     <p>{% translate "CURRENT_STATUS" %}</p>
     <p class="exercise-info-points">
-      {% points_badge summary %}
+      {% points_badge summary is_revealed=feedback_revealed %}
     </p>
     {% else %}
     <p>{% translate "EARNED_POINTS" %}</p>
@@ -21,7 +21,7 @@
             {% endif %}
         </small>
     </strong></p>
-    {% points_progress summary %}
+    {% points_progress summary is_revealed=feedback_revealed %}
     {% endif %}
 </div>
 
