--- a/exercise/templates/exercise/_submission_list.html
+++ b/exercise/templates/exercise/_submission_list.html
@@ -8,7 +8,7 @@
 	<div class="list-group">
 		{% for submission in submissions %}
 		<a href="{{ submission|url }}" class="list-group-item">
-			{% points_badge submission %}
+			{% points_badge submission is_revealed=feedback_revealed %}
 			{{ submission.exercise }}<br />
 			<small class="text-nowrap">
 				{{ submission.submission_time|date:'DATETIME_SECONDS_FORMAT' }}
