Hide assistant feedback when feedback is delayed
There was a bug in the delayed feedback update where assistant feedback
would be visible in the submission popup and the standalone submission
page, even though automatic feedback and points were hidden as intended.
This commit fixes the bug by hiding the assistant feedback when delayed
feedback is enabled.

--- a/exercise/templates/exercise/submission_plain.html
+++ b/exercise/templates/exercise/submission_plain.html
@@ -81,7 +81,7 @@
 
 		<div id="exercise-all">
 
-		{% if submission.assistant_feedback %}
+		{% if feedback_revealed and submission.assistant_feedback %}
 		<h4>{% translate "ASSISTANT_FEEDBACK" %}</h4>
 		<blockquote>{{ submission.assistant_feedback|safe }}</blockquote>
 		{% endif %}
