--- a/exercise/templates/exercise/submission.html
+++ b/exercise/templates/exercise/submission.html
@@ -23,7 +23,7 @@
     </ul>
     {% endif %}
 
-    {% if submission.assistant_feedback %}
+    {% if feedback_revealed and submission.assistant_feedback %}
         <h4>{% translate "ASSISTANT_FEEDBACK" %}</h4>
         <blockquote>{{ submission.assistant_feedback|safe }}</blockquote>
     {% endif %}
