--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -44,7 +44,7 @@
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false" role="button"
 							aria-haspopup="true" aria-expanded="false">
 							{% translate "MY_SUBMISSIONS" %}
-							({{ summary.get_submission_count }}{% if exercise.max_submissions %}/{{ exercise|max_submissions:profile }}{% endif %})
+							({{ summary.get_submission_count }}{% if exercise.max_submissions %}/{{ cached_points.personal_max_submissions|default_if_none:exercise.max_submissions }}{% endif %})
 							<span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu">
