--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -3,26 +3,26 @@
 {% load exercise %}
 
 <div class="well">
-	{% if exercise.category.confirm_the_level %}
-	<p>{% translate "CURRENT_STATUS" %}</p>
-	<p class="exercise-info-points">
-		{% points_badge summary %}
-	</p>
-	{% else %}
-	<p>{% translate "EARNED_POINTS" %}</p>
-	<p><strong class="h2 exercise-info-points">
-		{% format_points summary.get_points feedback_revealed False %}
-		<small>
-			/ {{ exercise.max_points }}
-			{% if summary.get_penalty %}
-			<span class="badge">
-				{% translate "LATE" %} -{{ summary.get_penalty|percent }} %
-			</span>
-			{% endif %}
-		</small>
-	</strong></p>
-	{% points_progress summary %}
-	{% endif %}
+    {% if exercise.category.confirm_the_level %}
+    <p>{% translate "CURRENT_STATUS" %}</p>
+    <p class="exercise-info-points">
+      {% points_badge summary is_revealed=feedback_revealed %}
+    </p>
+    {% else %}
+    <p>{% translate "EARNED_POINTS" %}</p>
+    <p><strong class="h2 exercise-info-points">
+        {% format_points summary.get_points feedback_revealed False %}
+        <small>
+            / {{ exercise.max_points }}
+            {% if summary.get_penalty %}
+            <span class="badge">
+                {% translate "LATE" %} -{{ summary.get_penalty|percent }} %
+            </span>
+            {% endif %}
+        </small>
+    </strong></p>
+    {% points_progress summary is_revealed=feedback_revealed %}
+    {% endif %}
 </div>
 
 <div class="panel panel-primary">
