Option to enable automatic enrollment in Edit Course view
Adds checkbox to Edit Course view where teacher can enable
automatic enrollment from SIS according to periodic schedule
as set in Celery settings. When automatic enrollment is enabled,
local students must enroll through SIS, and are not able to
enrol directly from A+. External students can still enroll normally
from A+.

--- a/course/templates/course/_enroll_form.html
+++ b/course/templates/course/_enroll_form.html
@@ -5,24 +5,28 @@
 	<div class="alert alert-info">
 	{% if enrollable %}
 		{% if instance.is_enrollment_open %}
-			<form method="post" action="{{ instance|url:'enroll' }}">
-				{% csrf_token %}
-				{% if instance.view_content_to > 1 %}
-					{% translate "ENROLL_TO_SUBMIT_EXERCISES" %}
-				{% else %}
-					{% translate "ENROLL_TO_SUBMIT_EXERCISES_AND_SEE_MATERIAL" %}
-				{% endif %}
-				<input type="submit" value="{% translate 'ENROLL' %}" class="aplus-button--default aplus-button--md">
-				{% if instance.enrollment_ending_time %}
-					<div>
-						<small>
-							{% blocktranslate trimmed with end=instance.enrollment_ending_time %}
-								ENROLLMENT_OPEN_UNTIL -- {{ end }}
-							{% endblocktranslate %}
-						</small>
-					</div>
-				{% endif %}
-			</form>
+			{% if instance.sis_enroll and not profile.is_external %}
+				{% translate "ENROLL_THROUGH_SIS" %}
+			{% else %}
+				<form method="post" action="{{ instance|url:'enroll' }}">
+					{% csrf_token %}
+					{% if instance.view_content_to > 1 %}
+						{% translate "ENROLL_TO_SUBMIT_EXERCISES" %}
+					{% else %}
+						{% translate "ENROLL_TO_SUBMIT_EXERCISES_AND_SEE_MATERIAL" %}
+					{% endif %}
+					<input type="submit" value="{% translate 'ENROLL' %}" class="aplus-button--default aplus-button--md">
+					{% if instance.enrollment_ending_time %}
+						<div>
+							<small>
+								{% blocktranslate trimmed with end=instance.enrollment_ending_time %}
+									ENROLLMENT_OPEN_UNTIL -- {{ end }}
+								{% endblocktranslate %}
+							</small>
+						</div>
+					{% endif %}
+				</form>
+			{% endif %}
 		{% elif instance.has_enrollment_closed %}
 			{% translate "ENROLLMENT_HAS_ENDED" %}
 		{% else %}
